app/src/test/resources/programs/invalid/structs/changingImmutableMember.exe
uct Box = {
    let x = 15;
    let y = 14;
}

foo main() -> Int {
    let mut box = new Box();
    box.x = 1534;
    0
}